--- a/index.html
+++ b/index.html
@@ -1,8 +1,54 @@
 <!DOCTYPE html>
-
 <html>
-  <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
-  </body>
+    
+<head>
+    <title>Un dolce "vegan"</title>
+    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+
+    <!-- see http://webdesign.tutsplus.com/tutorials/htmlcss-tutorials/quick-tip-dont-forget-the-viewport-meta-tag -->
+    <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=no">
+    <style>        
+        body { background-color: #e6ffb3; }
+        h1 { color: #b33c00; text-align: center; } 
+        h2 { color: #b33c00; text-align: left; } 
+        p { font-family: "Times New Roman"; font-size: 20px; }
+    </style>
+</head>
+
+<body>
+
+    <h1> Barrette di farro, avena e confettura </h1>
+    <br>
+    <h2> Ingredienti per 8 persone </h2>
+    <ul>
+        <li> Fiocchi di avena 160 gr </li>
+        <li> Farina di farro 200 gr </li>
+        <li> Bicarbonato di sodio 1/2 cucchiaino </li>
+        <li> Olio di semi spremuto a freddo 1,5 decilitro </li>
+        <li> Confettura di fragole 150 grammi </li>
+        <li> Farina di mandorle 100 grammi </li>
+        <li> Zucchero panela 60 grammi </li>
+        <li> Arancia non trattata scorza 1 </li>
+        <li> Confettura di lamponi 200 gr </li>
+        <li> Sale q.b. </li>    
+    </ul>
+    <br>
+    <h2> Come preparare le barrette di farro, avena e confettura </h2>
+    <ol>
+        <li> Mescola i fiocchi di avena con la farina di mandorle e quella di farro, unisci lo zucchero panela (zucchero di canna iperintegrale, si acquista nei negozi di alimentazione naturale), il bicarbonato, una presa di sale e la scorza grattugiata di 1 arancia non trattata. </li>
+        <br>
+        <li> Versaci l'olio di semi (a scelta) spremuto a freddo e mescola accuratamente, preferibilmente usando le mani. </li>
+        <br>
+        <li> Con 2/3 dell’impasto copri il fondo di una teglia (circa 22x32 cm) rivestita di carta da forno, premendolo bene con il palmo della mano. </li>
+        <br>
+        <li> Distribuiscici sopra le 2 confetture mescolate e termina con l’impasto rimasto. Cuoci in forno a 180° per 30 minuti circa. </li>
+        <br>
+        <li> Lascia raffreddare e taglia il dolce in quadrati o rettangoli. Puoi avvolgere le barrette di farro, avena e confettura nella carta da forno per conservarli alcuni giorni, chiusi in un recipiente, in un luogo fresco e asciutto. </li>
+    </ol>
+    <br>
+    <h2> Il risultato dovrebbe essere simile a questo: ) </h2>
+    <br>
+    <img src="http://static.salepepe.it/files/2016/02/barrette-di-farro-avena-crop-4-3-640-480.jpg" alt="Barrette di farro, avena e confettura" style="width:640px;height:480px;">
+
+</body>
 </html>
