image broken url change

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <br>
     <h2> Il risultato dovrebbe essere simile a questo: ) </h2>
     <br>
-    <img src="http://static.salepepe.it/files/2016/02/barrette-di-farro-avena-crop-4-3-640-480.jpg" alt="Barrette di farro, avena e confettura" style="width:640px;height:480px;">
+    <img src="https://www.salepepe.it/files/2016/02/barrette-di-farro-avena-crop-4-3-640-480.jpg" alt="Barrette di farro, avena e confettura" style="width:640px;height:480px;">
 
 </body>
 </html>
